[package]
name = "personal-finance-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossterm = "0.27.0"
dialoguer = "0.11.0"
inquire = "0.7.5"
regex = "1.10.5"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
